akprivate.yaml
apiVersion: v1
kind: Pod
metadata:
  name: akpriv
spec:
  imagePullSecrets:
  - name: mycred
  containers:
  - image: aakashgaur57/myapache_code
    name: akpriv
    ports:
    - containerPort: 80
