cmpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypodforc
  labels:
    name: mypodforc
spec:
  containers:
  - name: mypodforc
    image: httpd
    ports:
      - containerPort: 80
