deamon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: myapp
spec:
  selector:
   matchLabels:
    app: myapp
  template:
    metadata:
      name: myapp
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: httpd
          ports:
            - containerPort: 80
