deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: mydeploy
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "400m"   # 10% of 4 core CPU core
            memory: "400Mi"  # % of 16 GiB
