mypv.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvpod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvpod
  template:
    metadata:
      labels:
        app: pvpod
    spec:
      containers:
      - name: test
        image: nginx
        volumeMounts:
        - mountPath: "/tmp/vol"
          name: myvol
      volumes:
      - name: myvol
        persistentVolumeClaim:
          claimName: mypvc
