pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: course
  labels:
    name: red
spec:
  containers:
  - name: myapp
    image: aakashgaur57/
    ports:
      - containerPort: 80
