podwithvol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp1
  labels:
    name: myapp1
spec:
  containers:
  - name: myapp1
    image: httpd
    ports:
      - containerPort: 80
    volumeMounts:
      - mountPath: /var/www/html/
        name: mypvcname
  volumes:
  - name: mypvcname
    persistentVolumeClaim:
      claimName: mypvc
