ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test
  name: test
spec:
  containers:
  - image: ubuntu
    name: test
    ports:
    - containerPort: 80
    command: ["sleep", "300"] # Add the sleep command
