home.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
spec:
  selector:
    app: myhp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
