hpa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myns
---
apiVersion: v1
kind: Service
metadata:
  namespace: akns 
  name: ns-b
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: acg-stress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: acg-ns
  labels:
    app: acg-stress
  name: acg-web
spec:
  selector:
    matchLabels:
      app: acg-stress
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: acg-stress
    spec:
      containers:
      - image: k8s.gcr.io/hpa-example
        name: stresser
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 0.2
