project_pizza.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza
  namespace: pizza
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pizza
  template:
    metadata:
      labels:
        app: pizza
    spec:
      containers:
      - name: pizza
        image: aakashgaur57/pizza-service:1.12.0
        command: [ "nginx" ]  
        args: [ "-g", "daemon off;" ]
        ports:
        - containerPort: 80  
        
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        
          
---

apiVersion: v1
kind: Service
metadata:
  name: pizza
  namespace: pizza
spec:
  type: NodePort
  selector:
    app: pizza
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
