ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: www.xyz.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: home
            port: 
              number: 80
      - pathType: Prefix
        path: "/home"
        backend:
          service:
            name: home
            port: 
              number: 80
      - pathType: Prefix
        path: "/contact"
        backend:
          service:
            name: courses
            port: 
              number: 80
